Solucion de problemas

--- a/html/main.css
+++ b/html/main.css
@@ -176,7 +176,7 @@ body {
 }
 
 .others-bg {
-    background-image: url('./img/cat1.png');
+    background-image: url('./img/cat.png');
 }
 
 .view-btn {
